Se agrega tarea de Sistemas de Calificaciones

--- a/mod_1_data_fundamentals/sistema_de_calificaciones.ipynb
+++ b/mod_1_data_fundamentals/sistema_de_calificaciones.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,19 +125,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Entrada no válida. Debe ingresar un número entero.\n",
-      "Entrada no válida. Debe ingresar un número entero.\n",
-      "Entrada no válida. Debe ingresar un número entero.\n",
+      "Entrada no válida. Debe ingresar un número.\n",
       "\n",
       "Resumen de Calificaciones:\n",
-      "Estudiante: 1, Promedio: 1.00, Estado: Reprobado\n"
+      "Estudiante: Mario, Promedio: 5.33, Estado: Reprobado\n",
+      "Estudiante: Andrés, Promedio: 7.00, Estado: Aprobado\n",
+      "Estudiante: José, Promedio: 0.00, Estado: Reprobado\n",
+      "Estudiante: Romina, Promedio: 7.33, Estado: Aprobado\n",
+      "Estudiante: Victoria, Promedio: 8.00, Estado: Aprobado\n"
      ]
     }
    ],
